--- a/DB_Weather_api_202308.ipynb
+++ b/DB_Weather_api_202308.ipynb
@@ -2,17 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting xmltodict\n",
-      "  Downloading xmltodict-0.13.0-py2.py3-none-any.whl (10.0 kB)\n",
-      "Installing collected packages: xmltodict\n",
-      "Successfully installed xmltodict-0.13.0\n"
+      "Requirement already satisfied: xmltodict in c:\\users\\mei88\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (0.13.0)\n"
      ]
     },
     {
@@ -31,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +286,7 @@
        "   'KeyInfo': {'X509Data': {'X509Certificate': 'MIIHQDCCBiigAwIBAgIQauIRkpOPcGViI+LoZHWDFzANBgkqhkiG9w0BAQsFADCB\\nujELMAkGA1UEBhMCVVMxFjAUBgNVBAoTDUVudHJ1c3QsIEluYy4xKDAmBgNVBAsT\\nH1NlZSB3d3cuZW50cnVzdC5uZXQvbGVnYWwtdGVybXMxOTA3BgNVBAsTMChjKSAy\\nMDEyIEVudHJ1c3QsIEluYy4gLSBmb3IgYXV0aG9yaXplZCB1c2Ugb25seTEuMCwG\\nA1UEAxMlRW50cnVzdCBDZXJ0aWZpY2F0aW9uIEF1dGhvcml0eSAtIEwxSzAeFw0y\\nMzA0MjcxNDEyNDVaFw0yNDA1MDcxNDEyNDVaMGwxCzAJBgNVBAYTAkNBMQ8wDQYD\\nVQQIEwZRdWViZWMxETAPBgNVBAcTCEdhdGluZWF1MR8wHQYDVQQKExZTaGFyZWQg\\nU2VydmljZXMgQ2FuYWRhMRgwFgYDVQQDDA8qLndlYXRoZXIuZ2MuY2EwggEiMA0G\\nCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQDOSYFvWlJgQgD5twPwuMqUXQB8Raj6\\nenUh60KlOqYi2Moja8qBMhANS848XjHd+OlTNKv5J9YT6OoxTqcRe60e3nWYF6/u\\nPlu+O4KWOO8x6jWbttEn5G7j7V35yaWXqP0LObVrQLDMYX3D4xsm+MJK7eyGJz8k\\nAJAJYONS/+dp7/0jlrzlTjyuT4Uk50zVDvTGxiYpgjPfuXG9Bke5q8Cju4EEgAfW\\n1I2+67Is7ae2fTjhvPH+w+L4iujk1ucmkrZqd2Norr8eeLebvDiSNxV4FkdzUZKQ\\nTTycHQb1u/79WGgRKCH+nPYTzW/l/muRz59V0LKTQOlFmq8H45fmSYWZAgMBAAGj\\nggONMIIDiTAMBgNVHRMBAf8EAjAAMB0GA1UdDgQWBBRlq9u/A7i58xA3Eb4DmYis\\nFzYwKTAfBgNVHSMEGDAWgBSConB03bxTP8971PfNf6dgxgpMvzBoBggrBgEFBQcB\\nAQRcMFowIwYIKwYBBQUHMAGGF2h0dHA6Ly9vY3NwLmVudHJ1c3QubmV0MDMGCCsG\\nAQUFBzAChidodHRwOi8vYWlhLmVudHJ1c3QubmV0L2wxay1jaGFpbjI1Ni5jZXIw\\nMwYDVR0fBCwwKjAooCagJIYiaHR0cDovL2NybC5lbnRydXN0Lm5ldC9sZXZlbDFr\\nLmNybDCBnQYDVR0RBIGVMIGSgg8qLndlYXRoZXIuZ2MuY2GCDXdlYXRoZXIuZ2Mu\\nY2GCC21ldGVvLmdjLmNhgg0qLm1ldGVvLmdjLmNhghUqLmFscGhhLndlYXRoZXIu\\nZ2MuY2GCEyouYWxwaGEubWV0ZW8uZ2MuY2GCFCouYmV0YS53ZWF0aGVyLmdjLmNh\\nghIqLmJldGEubWV0ZW8uZ2MuY2EwDgYDVR0PAQH/BAQDAgWgMB0GA1UdJQQWMBQG\\nCCsGAQUFBwMBBggrBgEFBQcDAjBMBgNVHSAERTBDMDcGCmCGSAGG+mwKAQUwKTAn\\nBggrBgEFBQcCARYbaHR0cHM6Ly93d3cuZW50cnVzdC5uZXQvcnBhMAgGBmeBDAEC\\nAjCCAXsGCisGAQQB1nkCBAIEggFrBIIBZwFlAHUAc9meiRtMlnigIH1HneayxhzQ\\nUV5xGSqMa4AQesF3crUAAAGHww80IQAABAMARjBEAiAkpowR7bbTYLp4v/tw0Fav\\nHHP8mm2i6/ecg03yasJkkgIga1hmg5g/Gq97+HOCDwjsy77aS8+PirSarIO6/X1H\\nEfkAdQA7U3d1Pi25gE6LMFsG/kA7Z9hPw/THvQANLXJv4frUFwAAAYfDDzQcAAAE\\nAwBGMEQCIBKVCiUTam6W9Y+5TiuhpsxVVx2TYVz9SebYPuB4XyHUAiB4Y9ZXnkOt\\nrJJAaw4im3kY7OWZG40xPUL1ygK8trUsIAB1AO7N0GTV2xrOxVy3nbTNE6Iyh0Z8\\nvOzew1FIWUZxH7WbAAABh8MPNF0AAAQDAEYwRAIgYbZkNJlz8a4d35p4+wLg0h5P\\nWtFyyBEqy06IoSV7UWICIH65mirJoLVsZFK7kXW3IJF4+xlgATBcr/n2ImBLSWug\\nMA0GCSqGSIb3DQEBCwUAA4IBAQCcp2dfEDsCzJHpMsTF1hlEyYPTgmfrSbgegWT3\\n76r0r7XGY7qIym53HE6Pk3Q7BgsegpV+pS8UMWx1m9x0ZcUQX11gMBlNLv0WCSBe\\n4/9BOaGc2deYrXsRAmmFJwqvgegcBSQhg4zZSoSSVqJPhaJ1WYWqDbJW+doY15xy\\nJPm7UbZqCAbzm3/c36N9j/Zu6h+LA9rhltfwYoWCyqlBtJCRrs7K7KEP+dLtsoby\\n+AhyY+3dK2IB4G7v5Qbxa88WKV9EsXXMpvl0v/kXSDjIHJwRPyOf1OKU9x2Mc3Mx\\nKEgzSJ0GUUW0RqqCVWZ14TBoxUq1jJw4m12zSF+PYFpSH6g5'}}}}}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1120,7 @@
        "4        306     America/Regina  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1164,7 @@
        " '{http://www.w3.org/2000/09/xmldsig#}Signature']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1204,7 @@
        " '{urn:oasis:names:tc:emergency:cap:1.2}web'}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1230,7 @@
        " '{urn:oasis:names:tc:emergency:cap:1.2}polygon'}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1258,7 @@
        " '47.0294,-64.851 47.0405,-64.8304 47.0784,-64.7432 46.9104,-64.8468 46.9111,-64.8927 46.9072,-64.9004 46.8992,-64.9163 46.8998,-65.0159 46.7997,-65.0173 46.7989,-65.0318 46.7677,-65.0318 46.767,-64.9515 46.7149,-64.9176 46.7147,-64.9175 46.7031,-64.8389 46.7321,-64.769 46.6934,-64.6509 46.2865,-64.4795 46.2818,-64.5766 46.2742,-64.81 46.2709,-64.9062 46.2697,-64.9392 46.2523,-65.4017 46.2519,-65.4013 46.2515,-65.4013 46.3331,-65.8356 46.6329,-65.5705 46.733,-65.3919 46.7462,-65.368 47.0294,-64.851']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,57 +1273,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting shapely\n",
-      "  Downloading shapely-2.0.1-cp311-cp311-win_amd64.whl (1.4 MB)\n",
-      "                                              0.0/1.4 MB ? eta -:--:--\n",
-      "                                              0.0/1.4 MB 1.4 MB/s eta 0:00:01\n",
-      "     --                                       0.1/1.4 MB 919.0 kB/s eta 0:00:02\n",
-      "     --                                       0.1/1.4 MB 871.5 kB/s eta 0:00:02\n",
-      "     ----                                     0.1/1.4 MB 853.3 kB/s eta 0:00:02\n",
-      "     -----                                    0.2/1.4 MB 841.6 kB/s eta 0:00:02\n",
-      "     ------                                   0.2/1.4 MB 778.2 kB/s eta 0:00:02\n",
-      "     -------                                  0.3/1.4 MB 787.7 kB/s eta 0:00:02\n",
-      "     --------                                 0.3/1.4 MB 803.7 kB/s eta 0:00:02\n",
-      "     ---------                                0.3/1.4 MB 781.9 kB/s eta 0:00:02\n",
-      "     ----------                               0.4/1.4 MB 796.7 kB/s eta 0:00:02\n",
-      "     ------------                             0.4/1.4 MB 798.7 kB/s eta 0:00:02\n",
-      "     ------------                             0.4/1.4 MB 795.3 kB/s eta 0:00:02\n",
-      "     -------------                            0.5/1.4 MB 797.2 kB/s eta 0:00:02\n",
-      "     ---------------                          0.5/1.4 MB 800.0 kB/s eta 0:00:02\n",
-      "     ---------------                          0.5/1.4 MB 777.1 kB/s eta 0:00:02\n",
-      "     -----------------                        0.6/1.4 MB 781.3 kB/s eta 0:00:01\n",
-      "     -----------------                        0.6/1.4 MB 763.0 kB/s eta 0:00:02\n",
-      "     ------------------                       0.6/1.4 MB 766.8 kB/s eta 0:00:01\n",
-      "     -------------------                      0.7/1.4 MB 774.9 kB/s eta 0:00:01\n",
-      "     --------------------                     0.7/1.4 MB 768.6 kB/s eta 0:00:01\n",
-      "     ----------------------                   0.8/1.4 MB 771.4 kB/s eta 0:00:01\n",
-      "     -----------------------                  0.8/1.4 MB 778.2 kB/s eta 0:00:01\n",
-      "     ------------------------                 0.8/1.4 MB 781.0 kB/s eta 0:00:01\n",
-      "     ------------------------                 0.8/1.4 MB 767.5 kB/s eta 0:00:01\n",
-      "     --------------------------               0.9/1.4 MB 770.7 kB/s eta 0:00:01\n",
-      "     ---------------------------              0.9/1.4 MB 767.8 kB/s eta 0:00:01\n",
-      "     ----------------------------             1.0/1.4 MB 761.9 kB/s eta 0:00:01\n",
-      "     -----------------------------            1.0/1.4 MB 785.2 kB/s eta 0:00:01\n",
-      "     ------------------------------           1.0/1.4 MB 771.1 kB/s eta 0:00:01\n",
-      "     -------------------------------          1.1/1.4 MB 773.5 kB/s eta 0:00:01\n",
-      "     --------------------------------         1.1/1.4 MB 777.7 kB/s eta 0:00:01\n",
-      "     ---------------------------------        1.1/1.4 MB 765.9 kB/s eta 0:00:01\n",
-      "     ----------------------------------       1.2/1.4 MB 770.5 kB/s eta 0:00:01\n",
-      "     ------------------------------------     1.2/1.4 MB 772.2 kB/s eta 0:00:01\n",
-      "     ------------------------------------     1.2/1.4 MB 770.1 kB/s eta 0:00:01\n",
-      "     -------------------------------------    1.3/1.4 MB 772.9 kB/s eta 0:00:01\n",
-      "     --------------------------------------   1.3/1.4 MB 770.9 kB/s eta 0:00:01\n",
-      "     ---------------------------------------- 1.4/1.4 MB 767.0 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: shapely in c:\\users\\mei88\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (2.0.1)\n",
       "Requirement already satisfied: numpy>=1.14 in c:\\users\\mei88\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from shapely) (1.24.3)\n",
-      "Installing collected packages: shapely\n",
-      "Successfully installed shapely-2.0.1\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -1347,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1323,7 @@
        " 'Tweedie Brook']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1433,6 +1388,8 @@
        "      <th>expires</th>\n",
        "      <th>senderName</th>\n",
        "      <th>headline</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1449,6 +1406,8 @@
        "      <td>2023-08-12T11:00:32-00:00</td>\n",
        "      <td>Environment Canada</td>\n",
        "      <td>rainfall warning in effect</td>\n",
+       "      <td>46.16206</td>\n",
+       "      <td>-64.78281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1463,6 +1422,8 @@
        "      <td>2023-08-12T11:00:32-00:00</td>\n",
        "      <td>Environment Canada</td>\n",
        "      <td>rainfall warning in effect</td>\n",
+       "      <td>45.93785</td>\n",
+       "      <td>-64.55103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1477,6 +1438,8 @@
        "      <td>2023-08-12T11:00:32-00:00</td>\n",
        "      <td>Environment Canada</td>\n",
        "      <td>rainfall warning in effect</td>\n",
+       "      <td>45.70905</td>\n",
+       "      <td>-64.95534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1491,6 +1454,8 @@
        "      <td>2023-08-12T11:00:32-00:00</td>\n",
        "      <td>Environment Canada</td>\n",
        "      <td>rainfall warning in effect</td>\n",
+       "      <td>46.23557</td>\n",
+       "      <td>-64.50451</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1505,6 +1470,8 @@
        "      <td>2023-08-12T11:00:32-00:00</td>\n",
        "      <td>Environment Canada</td>\n",
        "      <td>rainfall warning in effect</td>\n",
+       "      <td>45.94894</td>\n",
+       "      <td>-65.07539</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1525,47 +1492,26 @@
        "3    Likely  2023-08-11T19:02:39-00:00  2023-08-12T11:00:32-00:00   \n",
        "4    Likely  2023-08-11T19:02:39-00:00  2023-08-12T11:00:32-00:00   \n",
        "\n",
-       "           senderName                    headline  \n",
-       "0  Environment Canada  rainfall warning in effect  \n",
-       "1  Environment Canada  rainfall warning in effect  \n",
-       "2  Environment Canada  rainfall warning in effect  \n",
-       "3  Environment Canada  rainfall warning in effect  \n",
-       "4  Environment Canada  rainfall warning in effect  "
+       "           senderName                    headline  latitude  longitude  \n",
+       "0  Environment Canada  rainfall warning in effect  46.16206  -64.78281  \n",
+       "1  Environment Canada  rainfall warning in effect  45.93785  -64.55103  \n",
+       "2  Environment Canada  rainfall warning in effect  45.70905  -64.95534  \n",
+       "3  Environment Canada  rainfall warning in effect  46.23557  -64.50451  \n",
+       "4  Environment Canada  rainfall warning in effect  45.94894  -65.07539  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Remove 'status' from the list of tags to extract from the XML and from the final table\n",
-    "info_tags = ['event', 'responseType', 'urgency', 'severity', 'certainty', 'effective', 'expires', 'senderName', 'headline']\n",
+    "# Rearrange columns to move 'latitude' and 'longitude' to the end\n",
+    "column_order = [col for col in result_df_reordered_with_coordinates_fixed.columns if col not in ['latitude', 'longitude']] + ['latitude', 'longitude']\n",
+    "result_df_final_order = result_df_reordered_with_coordinates_fixed[column_order]\n",
     "\n",
-    "data_list = []\n",
-    "\n",
-    "for info in root.findall(\"{urn:oasis:names:tc:emergency:cap:1.2}info\"):\n",
-    "    info_data = {tag: info.find(\"{urn:oasis:names:tc:emergency:cap:1.2}\" + tag).text if info.find(\"{urn:oasis:names:tc:emergency:cap:1.2}\" + tag) is not None else None for tag in info_tags}\n",
-    "    for area in info.findall(\"{urn:oasis:names:tc:emergency:cap:1.2}area\"):\n",
-    "        polygon_text = area.find(\"{urn:oasis:names:tc:emergency:cap:1.2}polygon\").text if area.find(\"{urn:oasis:names:tc:emergency:cap:1.2}polygon\") is not None else None\n",
-    "        if polygon_text:\n",
-    "            polygon = Polygon([(float(coord.split(',')[1]), float(coord.split(',')[0])) for coord in polygon_text.split()])\n",
-    "            for _, row in cities_df.iterrows():\n",
-    "                if is_inside_polygon(row['latitude'], row['longitude'], polygon):\n",
-    "                    info_data_copy = info_data.copy()\n",
-    "                    info_data_copy['province'] = row['province']\n",
-    "                    info_data_copy['city_name'] = row['name']\n",
-    "                    data_list.append(info_data_copy)\n",
-    "\n",
-    "# Convert the data list into a DataFrame\n",
-    "result_df_without_status = pd.DataFrame(data_list)\n",
-    "\n",
-    "# Rearrange columns to have 'province' and 'city_name' as the first and second columns\n",
-    "column_order = ['province', 'city_name'] + [col for col in result_df_without_status.columns if col not in ['province', 'city_name']]\n",
-    "result_df_reordered_without_status = result_df_without_status[column_order]\n",
-    "\n",
-    "# Display the first few rows of the result table\n",
-    "result_df_reordered_without_status.head()\n"
+    "# Display the first few rows of the reordered table\n",
+    "result_df_final_order.head()\n"
    ]
   }
  ],
