--- a/DB_Weather_api_202308.ipynb
+++ b/DB_Weather_api_202308.ipynb
@@ -932,26 +932,26 @@
     }
    ],
    "source": [
-    "import xml.etree.ElementTree as ET\n",
+    "#import xml.etree.ElementTree as ET\n",
     "\n",
     "# 1. Read the file\n",
-    "with open(\"C:\\\\Users\\\\mei88\\\\Downloads\\\\T_WWCN14_C_CWHX_202308111900_4274279531.cap\", 'r', encoding='utf-8') as file:\n",
-    "    xml_data = file.read()\n",
+    "#with open(\"C:\\\\Users\\\\mei88\\\\Downloads\\\\T_WWCN14_C_CWHX_202308111900_4274279531.cap\", 'r', encoding='utf-8') as file:\n",
+    " #   xml_data = file.read()\n",
     "\n",
     "# 2. Parse the XML content\n",
-    "root = ET.fromstring(xml_data)\n",
+    "#root = ET.fromstring(xml_data)\n",
     "\n",
     "# 3. Extract data\n",
     "# As an example, I'll print out all the elements and their text content.\n",
     "# You might want to modify this part to extract the specific data you're interested in.\n",
-    "for element in root.findall('.//'):  # Finds all elements in the XML tree\n",
+    "#for element in root.findall('.//'):  # Finds all elements in the XML tree\n",
     "    print(f\"{element.tag}: {element.text}\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
